# camel

./: .coverage  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEMO.md  LICENSE  README.md  VERSIONING.md  demo_a_benign.py  demo_b_injection.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  sdk-ci.yml
camel/: __init__.py  consent.py  dependency_graph.py  exceptions.py  execution_loop.py  interpreter.py  provenance.py  qllm_schema.py  qllm_wrapper.py  value.py
camel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
camel/capabilities/: __init__.py  annotations.py  types.py
camel/config/: __init__.py  allowlist.yaml  loader.py
camel/llm/: __init__.py  backend.py  exceptions.py  p_llm.py  protocols.py  qllm.py  query_interface.py  schemas.py
camel/llm/adapters/: __init__.py  claude.py  gemini.py  openai.py
camel/observability/: __init__.py  audit_sink.py  metrics.py
camel/policy/: __init__.py  governance.py  interfaces.py  reference_policies.py
camel/tools/: __init__.py  registry.py
camel_security/: __init__.py  agent.py  consent.py  testing.py  tool.py
camel_security.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: CONTRIBUTING.md  PRD.md  architecture.md  backend-adapter-developer-guide.md  consent-handler-integration.md  demo-guide.md  developer_guide.md  doc-review-checklist.md  e2e-scenario-specification.md  exit_criteria_checklist.md  future-work.md  limitations.md  lint-audit.md  migration-guide.md  milestone-2-exit-criteria-report.md  milestone-3-exit-criteria-checklist.md  milestone-3-exit-criteria-report.md  milestone4_design.md  policy-authoring-guide.md  policy-authoring-tutorial.md  policy_authorship_guide.md  quickstart.md  security-audit-log.md  security_hardening_allowlist.md  setup.md  tool-onboarding.md
docs/adr/: 001-q-llm-isolation-contract.md  002-camelvalue-capability-system.md  003-ast-interpreter-architecture.md  004-dependency-graph-architecture.md  005-p-llm-wrapper-architecture.md  006-q-llm-dynamic-schema-injection.md  007-execution-loop-orchestrator.md  008-isolation-test-harness-architecture.md  009-policy-engine-architecture.md  010-enforcement-hook-consent-audit-harness.md  011-three-tier-policy-governance.md  012-policy-testing-harness-consent-handler.md  013-provenance-chain-phishing-heuristic.md
docs/api/: execution_loop.md  index.md  interpreter.md  llm_backend.md  p_llm.md  q_llm.md
docs/benchmark/: agentdojo_benchmark_report.md
docs/benchmark/data/: asr_by_domain_backend.csv  consent_prompt_rates.csv  retry_rates.csv  token_overhead.csv  utility_by_domain_backend.csv
docs/design/: milestone4-escalation-detection.md  milestone4-exception-hardening.md  milestone4-strict-mode-extension.md  milestone5-sdk-packaging.md  security_hardening_design.md
docs/investigation/: demo_a_benign_diagnosis.md  scenario_b_bypass.md  scenario_b_bypass_root_cause.md  scenario_b_demo_documentation_gap.md
docs/manuals/: operator-guide.md
docs/policies/: reference-policy-spec.md  three-tier-policy-authorship-guide.md
docs/releases/: milestone4_release_notes.md
docs/reports/: milestone4_side_channel_test_report.md  milestone5_multi_backend_test_report.md
docs/user-guide/: provenance-badges.md
scripts/: benchmark_agentdojo.py  benchmark_interpreter.py
tests/: conftest.py  harness_results.json  test_allowlist_enforcement.py  test_backend_swap.py  test_capability_assignment.py  test_consent_handler.py  test_demo_b_regression.py  test_dependency_graph.py  test_e2e_enforcement.py  test_e2e_scenarios.py  test_escalation_detection.py  test_exception_hardening.py  test_execution_loop.py  test_exit_criteria.py  test_interpreter.py  test_isolation_harness.py  test_multi_backend_swap.py  test_observability.py  test_p_llm_isolation.py  test_policy.py  test_policy_conflict_resolver.py  test_policy_harness.py  test_policy_testing_harness.py  test_provenance.py  test_qllm.py  test_qllm_validation.py  test_qllm_wrapper.py  test_redaction_completeness.py  test_scenario_b_injection.py  test_sdk_thread_safety.py  test_strict_mode.py  test_three_tier_policy.py  test_value.py
tests/harness/: __init__.py  isolation_assertions.py  policy_harness.py  recording_backend.py  results_reporter.py  scenarios.py
tests/integration/: test_multi_backend_adapters.py  test_provenance_integration.py  test_strict_mode_e2e.py
tests/llm/: test_backend.py  test_pllm.py  test_qllm.py
tests/policies/: __init__.py  test_agentdojo_mapping.py  test_reference_policies.py
tests/side_channel/: __init__.py  test_exception_bit_leakage.py  test_loop_count_inference.py  test_timing_primitive_exclusion.py
ui/: jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ui/src/: ChatResponseAnnotator.integration.test.ts  ChatResponseAnnotator.stories.ts  ChatResponseAnnotator.test.ts  ChatResponseAnnotator.ts  index.ts  types.ts
