[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-security"
version = "0.6.0"
description = "CaMeL — Capabilities for Machine Learning: a security layer protecting LLM-based agentic systems from prompt injection attacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.0",
    "interrogate>=1.5",
    "types-PyYAML>=6.0",
]
gemini = ["google-generativeai>=0.7.0"]
openai = ["openai>=1.30.0"]
all-backends = [
    "anthropic>=0.25",
    "google-generativeai>=0.7.0",
    "openai>=1.30.0",
]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["camel*", "camel_security*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: adapter integration tests (runnable offline with mock SDKs)",
]

[tool.interrogate]
ignore-init-method = true  # __init__ is documented in the class-level Parameters section
ignore-init-module = false
ignore-magic = true        # other dunder methods (e.g. __str__, __new__) are self-evident
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 90
exclude = ["setup.py", "docs", "build"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
