[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-security"
version = "0.6.0"
description = "CaMeL — Capabilities for Machine Learning: a security layer protecting LLM-based agentic systems from prompt injection attacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Pydantic v2 is required for structured-output schemas; cap at <3 (breaking API changes expected).
    "pydantic>=2.0,<3",
    # typing-extensions 4.6 introduced TypeVar defaults needed on 3.11; cap at <5.
    "typing-extensions>=4.6,<5",
    # PyYAML is required at runtime by camel/config/loader.py for allowlist.yaml parsing.
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
anthropic = [
    # Anthropic SDK — still in 0.x pre-1.0 stability; cap at <1 to avoid unknown breaking changes.
    # Minimum 0.50 required for the Messages API shape used by ClaudeBackend.
    "anthropic>=0.50,<1",
]
dev = [
    # pytest 8+ is required for the asyncio_mode="auto" setting; cap at <10 to cover 8.x and 9.x.
    "pytest>=8.0,<10",
    # pytest-asyncio 1.x was released after 0.23; cap at <2 to cover both series.
    "pytest-asyncio>=0.23,<2",
    # mypy 1.9 introduced several strict-mode improvements used in CI; cap at <2.
    "mypy>=1.9,<2",
    # ruff is still in 0.x; cap at <1 (API/config changes expected at 1.0).
    "ruff>=0.4,<1",
    # pre-commit 4.x was released; cap at <5 to cover both 3.x and 4.x.
    "pre-commit>=3.0,<5",
    # interrogate 1.x only; cap at <2.
    "interrogate>=1.5,<2",
    # types-PyYAML follows PyYAML 6.x; cap at <7.
    "types-PyYAML>=6.0,<7",
]
gemini = [
    # google-generativeai is still in 0.x (latest 0.8.x); cap at <1 to avoid breaking 1.0 changes.
    # Minimum 0.7.0 required for response_mime_type / response_schema structured-output support.
    "google-generativeai>=0.7.0,<1",
]
openai = [
    # openai SDK 1.x stable series; cap at <2 — the 2.x series has not yet been released.
    # Minimum 1.30.0 required for the structured-output response_format used by OpenAIBackend.
    "openai>=1.30.0,<2",
]
all-backends = [
    "anthropic>=0.50,<1",
    "google-generativeai>=0.7.0,<1",
    "openai>=1.30.0,<2",
]
observability = [
    # prometheus-client is still in 0.x; cap at <1.
    "prometheus-client>=0.20,<1",
    # opentelemetry 1.x stable series; cap at <2.
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["camel*", "camel_security*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: adapter integration tests (runnable offline with mock SDKs)",
]

[tool.interrogate]
ignore-init-method = true  # __init__ is documented in the class-level Parameters section
ignore-init-module = false
ignore-magic = true        # other dunder methods (e.g. __str__, __new__) are self-evident
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 90
exclude = ["setup.py", "docs", "build"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
